# SupportVectorRegression

./: .gitignore  README.md  data_analysis.ipynb  main.py  pyproject.toml  svr_test.ipynb
ai_project/common/data_manipulation/: prepare_data.py
ai_project/data/processed/: house_price.csv  life_expectancy_data.csv
ai_project/models/support_vector_regression/: svr.py
ai_project/models/support_vector_regression/definitions/: kernels.py  loss_functions.py
