[tool.poetry]
name = "ai-project"
version = "0.1.0"
description = ""
authors = ["Arczi4 <urzedowski.artur@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"
tensorflow = "^2.11.0"
seaborn = "^0.12.2"
tensorflow-intel = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
